Fix vertical centering of nav button on mobile
Use top: 50% with translateY(-50%) to properly center the
absolutely-positioned nav button within the header, replacing
the line-height approach which doesn't work with position: absolute.

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -34,8 +34,11 @@
 }
 
 // Vertically center the nav button within the header on mobile
-.site-nav {
-  line-height: $base-line-height * $base-font-size * 2.25;
+@media screen and (max-width: $on-medium) {
+  .site-nav {
+    top: 50% !important;
+    transform: translateY(-50%);
+  }
 }
 
 // Vertically center the SVG hamburger icon within its container
